# linear_algebra_with_c

./: .gitignore  CMakeLists.txt  README.md
includes/: LAWC_World.hpp  World.hpp
src/: CMakeLists.txt  SampleMain.cpp
src/matrix/: LAWC_Matrix.c  LAWC_Matrix.cpp  LAWC_Matrix.h  LAWC_Matrix.hpp  Matrix.cpp  Matrix.hpp
test/: CMakeLists.txt  TestCode.cpp
test/matrix/: TestMatrix.cpp
